# Qwen-finetune

./: .gitignore  AGENTS.md  ARCHITECTURE_ALTERNATIVES.md  CHANGES_AND_ISSUES_SUMMARY.md  CLAUDE.md  Qwen3_(4B)_Instruct_sample.ipynb  README.md  baseline-gpt-inference.py  download_datasets_from_hf.py  env_snapshot_20251226_085433.txt  evaluate_model.py  finetune_inference.py  finetune_quantize.py  finetune_structure_code.md  finetuning_objectives.md  floofy-popping-meteor.md  instruction_detailed.md  main.py  pyproject.toml  qwen_finetune.py  requirements.txt  structure_extract_address_prompt.py  structure_extract_person_prompt.py  system_prompt_compact.md  system_prompt_updated.md  task-explanation.md  train_all.sh  train_phase2.sh  upload_merged_model.py  uploaded_inference.py
scripts/: dedup_articles_by_title_body.py  prepare_curriculum_data.py  run_axolotl_train.sh  select_review_sample.py  split_csv_by_id_balanced_size.py
src/axolotl_configs/: gpt-oss_20b.yml  qwen_finetune.yml  qwen_finetune_test.yml  rakuten_7b.yml  rakuten_7b_phase1.yml  rakuten_7b_phase2.yml
src/callbacks/: __init__.py  generation_eval.py  mlflow_logger.py
src/deepspeed_configs/: zero2.json
