[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-finetune"
version = "0.1.0"
description = "Rakuten-7B LoRA finetuning with flash-attention"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "torch==2.9.1",
    "axolotl",
    "huggingface-hub",
    "mlflow",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uv]
# Multiple indexes: PyTorch cu130 (priority) + PyPI (fallback)
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
priority = "primary"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
priority = "supplemental"
