[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-finetune"
version = "0.1.0"
description = "Rakuten-7B LoRA finetuning with flash-attention"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "torch==2.9.1",
    "torchvision==0.24.1",
    "torchaudio==2.9.1",
    "huggingface-hub",
    "mlflow",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uv]
# Indexes: PyPI default + PyTorch cu130 for torch packages
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
priority = "default"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
priority = "supplemental"

# Pin torch packages to PyTorch cu130 index
[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
