[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-finetune"
version = "0.1.0"
description = "Rakuten-7B LoRA finetuning with flash-attention"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "torch==2.9.0",
    "torchvision==0.24.0",
    "torchaudio==2.9.0",
    "huggingface-hub>=0.34.0,<1.0",
    "numpy<2.4",
    "mlflow",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uv]
# Indexes: PyPI default + PyTorch cu128 for torch packages
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
priority = "default"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "supplemental"

# Pin torch packages to PyTorch cu128 index
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
